--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
                     <img src="image/before1.png" alt="Before" class="image before">
                 </div>
                 <div class="slider"></div>
+                <div class="circle_slider"> <> </div>
             </div>
             <button onclick="UpChangeImage()">></button>
         </div>
         <div class="dots">
+            <span class="dot"></span>
+            <span class="dot"></span>
             <span class="dot"></span>
             <span class="dot"></span>
             <span class="dot"></span>
